refactor(api): replace Java 9+ APIs and private interface methods